# nano-scientist

./: .env.example  .gitignore  CLAUDE.md  README.md  example.py  main.py  mini_researcher_agent.py  pyproject.toml  requirements.txt  research.py  setup.sh
config/: config.yaml
examples/: advanced_research.py  basic_research.py  custom_tools.py  minimal_example.py
mcp/: mcp.json
msr_scientist/: __init__.py  agent.py
msr_scientist/tools/: __init__.py  evolution.py  experiment.py  hypothesis.py  paper.py
scientific-skills/experimental-evaluation/: SKILL.md
scientific-skills/literature-survey/: SKILL.md
scientific-skills/paper-writing/: SKILL.md
showcases/opd/: proposal.md
showcases/sl-ei/: proposal.md
skills/: README.md  skills.json  validate_skills.py
skills/academic-slides/: SKILL.md
skills/evo-memory/: SKILL.md
skills/experiment-craft/: SKILL.md
skills/experiment-iterative-coder/: SKILL.md
skills/experiment-pipeline/: SKILL.md
skills/nano-banana/: SKILL.md
skills/paper-navigator/: SKILL.md
skills/paper-planning/: SKILL.md
skills/paper-rebuttal/: SKILL.md
skills/paper-review/: SKILL.md
skills/paper-writing/: SKILL.md
skills/research-ideation/: SKILL.md
skills/research-survey/: SKILL.md
skills/study-workflow/: SKILL.md
skills/study-workflow/scripts/: generate.py
src/: __init__.py  config.py  execute_analyze.py  flow.py  install_tectonic.py  main.py  nodes.py  report_write.py  research_plan.py  utils.py
src/skill_orchestrator/: client.py  orchestrator.py  prompts.py  run_context.py
utils/: llm.py
workspace_eval_0/: experiment.py
workspace_eval_1/: experiment.py
